app-three/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: nginxdemos/hello:plain-text # Example image
        ports:
        - containerPort: 80
